[print] squashed css animation bug in print css fuck yeah

--- a/app/assets/stylesheets/print.css.sass
+++ b/app/assets/stylesheets/print.css.sass
@@ -126,11 +126,12 @@
   .course-wrapper
     height: inherit
     float: none
-    width: 80%
+    width: 100%
 
   .course-assembly-container
     position: relative
     height: inherit
+    margin-top: -58px
 
   .course-content-wrapper
     position: relative
@@ -139,3 +140,4 @@
     padding-right: 0px
     padding-top: 0px
     padding-bottom: 0px
+    @include transition(none)
